--- a/index.html
+++ b/index.html
@@ -27,30 +27,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <style>
-    .title {
-        display: block;
-        text-decoration: none;
-        text-align: center;
-        line-height: 1.5;
-        margin: 20px 0px;
-        background-image: -webkit-linear-gradient(left,#3498db,#f47920 10%,#d71345 20%,#f7acbc 30%,#ffd400 40%,#3498db 50%,#f47920 60%,#d71345 70%,#f7acbc 80%,#ffd400 90%,#3498db);
-        color: transparent;
-        -webkit-background-clip: text;
-        background-size: 200% 100%;
-        -webkit-animation: slide 2s infinite linear;
-        animation: slide 5s infinite linear;
-        font-size: 40px;
-    }
-    @keyframes slide {
-        0%  {
-          background-position: 0 0;
-        }
-        100% {
-          background-position: -100% 0;
-        }
-    }
-  </style>
+
 
 </head>
 
@@ -58,8 +35,9 @@
 
   <!-- ======= Header ======= -->
   <header id="header">
+    
     <div class="container">
-        <h1><a href="index.html">駱昱辰</a></h1> <h2>資工一1   31號</h2>
+        <h1 class="neon"><a href="index.html">駱昱辰</a></h1> <h2>資工一1   31號</h2>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2><span>國立臺中科技大學</span> <b>(National Taichung University of Science and Technology)</b></h2>
@@ -107,7 +85,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>生日:</strong> <span>2005/04/27</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>網站:</strong> <span>https://justin0427.github.io/</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>電話:</strong> <span>0984097372</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>電話:</strong> <span>09840XXXXX</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>城市:</strong> <span>臺中</span></li>
               </ul>
             </div>
@@ -374,7 +352,7 @@
             </p>
           </div>
           <div class="resume-item">
-            <h4>競賽餐與</h4>
+            <h4>競賽參與</h4>
             <ul>
               <li>全國商業類高級中等學校技藝競賽(程式設計)</li>
             </ul>
@@ -438,7 +416,7 @@
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>打給我(但我不會接)</h3>
-            <p>0984097372</p>
+            <p>09840XXXXX</p>
           </div>
         </div>
       </div>
